--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,6 @@
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
